tests/NormalTests/paczka1/fuzzy1/18053606.err
Error in line 1: hjTRt7rjr S295 98,2
Error in line 20: cSk5 S113 131,01
Error in line 15: S295 A997 19,2
Error in line 22: S295 S295 18,6
Error in line 31: psCs9t S955 77,4
